test/compiler/as3/LocalizedErrors/1095-LineTerminatorInDoubleQuotes.err

[Compiler] Error #1095: Syntax error: A string literal must be terminated before the line break.
1095-LineTerminatorInDoubleQuotes.as, Ln 5, Col 16:
var x:String = "
...............^

[Compiler] Error #1084: Syntax error: expecting identifier before end of program.
1095-LineTerminatorInDoubleQuotes.as, Ln 6, Col 1:
";
^

2 errors found
